# adbLib

./: .gitignore  CMakeLists.txt  build.bat  build.sh  doxyfile.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/: adbLib.hpp
lib/: adbLib.cpp
src/: exampleUse.cpp
